--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<script src="https://gist.github.com/anyadoc/758218aa4c693e8756a9261959f6f503"></script>
+<script src="https://gist.github.com/anyadoc/758218aa4c693e8756a9261959f6f503.js"></script>
+
